--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,24 +3,10 @@
 <head>
 <!-- SCROLLS -->
 <!-- load bootstrap and fontawesome via CDN -->
+<link rel="stylesheet" href="css/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" href="css/dist/css/all.css" />
 <link rel="stylesheet"
-	href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-<link rel="stylesheet"
-	href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
-
-<!-- SPELLS -->
-<!-- load angular and angular route via CDN -->
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!-- Tell the browser to be responsive to screen width -->
-<meta
-	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
-	name="viewport">
-<!-- Bootstrap 3.3.6 -->
+	href="css/font-awesome-4.7.0/css/font-awesome.css" />
 <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
 <!-- Font Awesome -->
 <link rel="stylesheet"
@@ -34,40 +20,62 @@
        folder instead of downloading all of them to reduce the load. -->
 <link rel="stylesheet" href="../../dist/css/skins/_all-skins.min.css">
 
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
+<!-- SPELLS -->
+<!-- load angular and angular route via CDN -->
+<!--<script src="js/angular.min.js"></script>-->
+<!--<script src="js/angularjsroute.js"></script>-->
+<script
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
 </head>
 <body ng-controller="mainController">
 
 	<!-- HEADER AND NAVBAR -->
-	<header>
-		<nav class="navbar navbar-default">
-			<div class="container">
-				<div class="navbar-header">
-					<p class="navbar-brand">Stock Management</p>
-				</div>
-
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-					<li><a href="#!/export"><i class="fa fa-shield"></i> Export</a></li>
-					<li><a href="#!/import"><i class="fa fa-comment"></i>
-							Import</a></li>
-				</ul>
-			</div>
-		</nav>
-	</header>
+	<header> </header>
 	<!-- MAIN CONTENT AND INJECTED VIEWS -->
-	<div id="main">
-		<!-- angular templating -->
-		<!-- this is where content will be injected -->
-		<did ng-view></did>
 
-		<script src="script.js"></script>
+	<div class="container">
+		<div class="row">
+			<div class="col-12 header">
+				<nav class="navbar navbar-default">
+					<div class="container">
+						<div class="navbar-header">
+							<p class="navbar-brand">Stock Management</p>
+						</div>
+
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+							<li><a href="#!/export"><i class="fa fa-shield"></i>
+									Export</a></li>
+							<li><a href="#!/import"><i class="fa fa-comment"></i>Import</a></li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-xs-12 col-md-6 col-lg-8 main-content flex-column"  style= "width:100%">
+				<div id="main">
+					<!-- angular templating -->
+					<!-- this is where content will be injected -->
+					<did ng-view></did>
+
+					<script src="js/script.js"></script>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<footer class="main-footer" style = "position: absolute; right: 0;  bottom: 0; left: 0;  padding: 1rem;">
+				<div>
+					<b>Version</b> 0.0.1 SNAPPSHOT
+				</div>
+				<strong>Copyright &copy; RBoy - <a
+					href="https://www.facebook.com/dtduy15">Đặng Thành Duy</a>.
+				</strong> All rights reserved.
+			</footer>
+		</div>
 	</div>
-
 </body>
 </html>
