--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -72,7 +72,7 @@
 					<b>Version</b> 0.0.1 SNAPPSHOT
 				</div>
 				<strong>Copyright &copy; RBoy - <a
-					href="https://www.facebook.com/dtduy15">Đặng Thành Duy</a>.
+					href="https://www.facebook.com/dtduy15">Dang Thanh Duy</a>.
 				</strong> All rights reserved.
 			</footer>
 		</div>
