--- a/src/main/resources/static/pages/import.html
+++ b/src/main/resources/static/pages/import.html
@@ -148,7 +148,7 @@
 				<tr>
 					<th>ID</th>
 					<th>Name</th>
-					<th>code</th>
+					<th>code</th>Code
 					<th>Type</th>
 					<th>Unit</th>
 					<th>Quantily</th>
@@ -157,12 +157,18 @@
 				</tr>
 				<tr>
 					<td>183</td>
-					<td>Shirt</td>
-					<td>S01</td>
+					<td>
+                        <select ng-model="selectedName" ng-options="x.typeName for x in nameItems"/>
+                    </td>
+					<td>
+                        <select ng-model="selected" ng-options="x.code for x in nameItems"/>
+                    </td>
 					<td>Clothes</td>
 					<td>Cai</td>
 					<td>10</td>
-					<td>Description</td>
+					<td>
+                        <select ng-model="selected" ng-options="x.decription for x in nameItems"/>
+                    </td>
 					<td><span class="label label-success">Approved</span></td>
 				</tr>
 				<tr>
