--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,9 +46,10 @@
 
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+							<li><a href="#!/mystock"><i class="fa fa-comment"></i>My Stock</a></li>
+							<li><a href="#!/import"><i class="fa fa-comment"></i>Import</a></li>
 							<li><a href="#!/export"><i class="fa fa-shield"></i>
 									Export</a></li>
-							<li><a href="#!/import"><i class="fa fa-comment"></i>Import</a></li>
 						</ul>
 					</div>
 				</nav>
