--- a/src/main/resources/static/pages/import.html
+++ b/src/main/resources/static/pages/import.html
@@ -147,7 +147,7 @@
 				<tr>
 					<th>ID</th>
 					<th>Name</th>
-					<th>code</th>Code
+					<th>Code</th>
 					<th>Type</th>
 					<th>Unit</th>
 					<th>Quantily</th>
@@ -157,7 +157,7 @@
 				<tr>
 					<td>183</td>
 					<td>
-                        <select ng-model="selectedName" ng-options="x.typeName for x in nameItems"/>
+                        <select ng-model="selectedName" ng-options="x.typeName for x in nameItems" style="radius: 5px 5px; border : 5px"/>
                     </td>
 					<td>
                         <select ng-model="selected" ng-options="x.code for x in nameItems"/>
