Add data test + Change Database relationship

--- a/src/main/resources/static/pages/export.html
+++ b/src/main/resources/static/pages/export.html
@@ -25,7 +25,7 @@
 					<th>code</th>
 					<th>Type</th>
 					<th>Unit</th>
-					<th>Quantily</th>
+					<th>Quantity</th>
 					<th>Description</th>
 					<th>Action</th>
 				</tr>
