--- a/src/main/resources/static/pages/import.html
+++ b/src/main/resources/static/pages/import.html
@@ -150,7 +150,7 @@
 					<th>Code</th>
 					<th>Type</th>
 					<th>Unit</th>
-					<th>Quantily</th>
+					<th>Quantity</th>
 					<th>Description</th>
 					<th>Action</th>
 				</tr>
