integrate get All Goods Modified css

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,27 +3,17 @@
 <head>
 <!-- SCROLLS -->
 <!-- load bootstrap and fontawesome via CDN -->
-<link rel="stylesheet" href="css/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/dist/css/all.css" />
 <link rel="stylesheet"
 	href="css/font-awesome-4.7.0/css/font-awesome.css" />
-<link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 <!-- Font Awesome -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 <!-- Ionicons -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-<!-- Theme style -->
-<link rel="stylesheet" href="../../dist/css/AdminLTE.min.css">
-<!-- AdminLTE Skins. Choose a skin from the css/skins
-       folder instead of downloading all of them to reduce the load. -->
-<link rel="stylesheet" href="../../dist/css/skins/_all-skins.min.css">
 
-<!-- SPELLS -->
-<!-- load angular and angular route via CDN -->
-<!--<script src="js/angular.min.js"></script>-->
-<!--<script src="js/angularjsroute.js"></script>-->
 <script
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script
