--- a/src/main/resources/static/pages/export.html
+++ b/src/main/resources/static/pages/export.html
@@ -4,7 +4,7 @@
 		<div class="box-header">
 			<h3 class="box-title">List all goods in stock</h3>
 			<div class="box-tools">
-				<div class="input-group input-group-sm" style="width: 150px;">
+				<div class="input-group input-group-sm search">
 					<input type="text" name="table_search"
 						class="form-control pull-right" placeholder="Search">
 
@@ -25,49 +25,21 @@
 					<th>code</th>
 					<th>Type</th>
 					<th>Unit</th>
+					<th>Image Path</th>
 					<th>Quantity</th>
-					<th>Description</th>
-					<th>Action</th>
+					<th>Import Price</th>
+					<th>Export Price</th>
 				</tr>
-				<tr>
-					<td>183</td>
-					<td>Shirt</td>
-					<td>S01</td>
-					<td>Clothes</td>
-					<td>Cai</td>
-					<td>10</td>
-					<td>Description</td>
-					<td><span class="label label-success">Approved</span></td>
-				</tr>
-				<tr>
-					<td>183</td>
-					<td>Shirt</td>
-					<td>S01</td>
-					<td>Clothes</td>
-					<td>Cai</td>
-					<td>10</td>
-					<td>Description</td>
-					<td><span class="label label-success">Approved</span></td>
-				</tr>
-				<tr>
-					<td>183</td>
-					<td>Shirt</td>
-					<td>S01</td>
-					<td>Clothes</td>
-					<td>Cai</td>
-					<td>10</td>
-					<td>Description</td>
-					<td><span class="label label-success">Approved</span></td>
-				</tr>
-				<tr>
-					<td>183</td>
-					<td>Shirt</td>
-					<td>S01</td>
-					<td>Clothes</td>
-					<td>Cai</td>
-					<td>10</td>
-					<td>Description</td>
-					<td><span class="label label-success">Approved</span></td>
+				<tr ng-repeat="x in getAllGoods">
+					<td>{{ x.id}}</td>
+					<td>{{ x.name }}</td>
+					<td>{{ x.code }}</td>
+					<td>{{ x.type }}</td>
+					<td>{{ x.unit }}</td>
+					<td>{{ x.imagePath }}</td>
+					<td>{{ x.quantity }}</td>
+					<td>{{ x.importPrice }}</td>
+					<td>{{ x.exportPrice }}</td>
 				</tr>
 			</table>
 		</div>
@@ -76,9 +48,7 @@
 			<button type="submit" class="btn btn-info pull-right"
 				ng-click="submit()">Create</button>
 		</div>
-		<!-- /.box-body -->
 	</div>
-	<!-- /.box -->
 </div>
 
 
