--- a/src/main/resources/static/pages/import.html
+++ b/src/main/resources/static/pages/import.html
@@ -50,15 +50,6 @@
 					</div>
 				</div>
 
-				<div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
-						<div class="checkbox">
-							<label> <input type="checkbox"> Remember me
-							</label>
-						</div>
-					</div>
-				</div>
-
 			</div>
 			<!-- /.box-body -->
 			<div class="box-footer">
@@ -71,18 +62,15 @@
 	</div>
 
 	<div class="box box-success col-sm-3"
-		style="width: 45%; height: 419px; margin-left: 90px">
+		style="width: 45%; height: 419px; margin-left: 111px">
 		<div class="box-header with-border">
 			<h3 class="box-title">Create new good type</h3>
 		</div>
-		<!-- /.box-header -->
-		<!-- form start -->
 		<form class="form-horizontal">
-			<div class="box-body" style="height: 320px">
+			<div class="box-body">
 
 				<div class="form-group">
-					<label for="goodTypeName" class="col-sm-3 control-label">Type's
-						name</label>
+					<label for="goodTypeName" class="col-sm-3 control-label">Type'sname</label>
 					<div class="col-sm-8">
 						<input type="text" class="form-control" id="goodTypeName"
 							ng-model="goodTypeName" placeholder="Enter name ...">
@@ -105,18 +93,9 @@
 					</div>
 				</div>
 
-				<div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
-						<div class="checkbox">
-							<label> <input type="checkbox"> Remember me
-							</label>
-						</div>
-					</div>
-				</div>
-
 			</div>
 			<!-- /.box-body -->
-			<div class="box-footer">
+			<div class="box-footer footer-button">
 				<button type="submit" class="btn btn-default">Clear</button>
 				<button type="submit" class="btn btn-info pull-right"
 					ng-click="submitGoodType()">Create</button>
@@ -129,7 +108,7 @@
 		<div class="box-header">
 			<h3 class="box-title">Responsive Hover Table</h3>
 			<div class="box-tools">
-				<div class="input-group input-group-sm" style="width: 150px;">
+				<div class="input-group input-group-sm search">
 					<input type="text" name="table_search"
 						class="form-control pull-right" placeholder="Search">
 
@@ -157,7 +136,7 @@
 				<tr>
 					<td>183</td>
 					<td>
-                        <select ng-model="selectedName" ng-options="x.typeName for x in nameItems" style="radius: 5px 5px; border : 5px"/>
+                        <select ng-model="selectedName" ng-options="x.typeName for x in nameItems"/>
                     </td>
 					<td>
                         <select ng-model="selected" ng-options="x.code for x in nameItems"/>
