Create popup import. Load provider

--- a/src/main/resources/static/app/pages/import/import.html
+++ b/src/main/resources/static/app/pages/import/import.html
@@ -14,9 +14,14 @@
             </div>
 		</div>
 	</div>
-    <div class="btn-createnewgood">
-        <button type="submit" class="btn btn-info" ng-click="createNewGoods()">Create</button>
-    </div>
+	<div>
+		<div class="btn-importgood">
+			<button type="submit" class="btn btn-info" ng-click="importGoods()">Import</button>
+		</div>
+		<div class="btn-createnewgood">
+			<button type="submit" class="btn btn-info" ng-click="createNewGoods()">Create</button>
+		</div>
+	</div>
 	<div class="box-body table-responsive no-padding">
 		<table class="table table-hover">
 			<tr>
@@ -45,4 +50,7 @@
 	</div>
 </div>
 
-
+<!--focus out-->
+<!--<input type="number" ng-blur="" ng-model="a" />-->
+<!--<input type="number" ng-blur="" ng-model="b"/>-->
+<!--<h1>{{ a + b }}</h1>-->
