--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,6 @@
 <head>
     <!-- SCROLLS -->
     <!-- load bootstrap and fontawesome via CDN -->
-    <link rel="stylesheet" href="css/dist/css/all.css"/>
     <link rel="stylesheet"
           href="css/font-awesome-4.7.0/css/font-awesome.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
@@ -15,6 +14,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
+    <link rel="stylesheet" href="css/dist/css/all.css"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
@@ -89,8 +89,23 @@
                 <script src="app/component/popup/export-good/exportgood.component.js"></script>
                 <script src="app/component/popup/export-good/exportgood.controller.js"></script>
 
+                <script src="app/component/popup/import-good/importgood.component.js"></script>
+                <script src="app/component/popup/import-good/importgood.controller.js"></script>
+
             </div>
         </div>
+    </div>
+    <div class="row">
+        <footer class="main-footer">
+            <div class="footer-content">
+                <div>
+                    <b>Version</b> 0.0.1 SNAPPSHOT
+                </div>
+                <strong>Copyright &copy; RBoy - <a
+                        href="https://www.facebook.com/dtduy15">Dang Thanh Duy</a>.
+                </strong> All rights reserved.
+            </div>
+        </footer>
     </div>
 </div>
 </body>
