--- a/src/main/resources/static/app/pages/import/import.html
+++ b/src/main/resources/static/app/pages/import/import.html
@@ -34,6 +34,7 @@
 				<th>Quantity</th>
 				<th>Import Price</th>
 				<th>Export Price</th>
+				<th>Action</th>
 			</tr>
 			<tr ng-repeat="x in getAllGoodsImportPage">
 				<td>{{ x.id}}</td>
