Handle popup: create new provider and new type

--- a/src/main/resources/static/app/pages/import/import.html
+++ b/src/main/resources/static/app/pages/import/import.html
@@ -1,54 +1,58 @@
 <div>
-	<div class="box-header">
-		<h3 class="box-title">Responsive Hover Table</h3>
-		<div class="box-tools">
-			<div class="input-group input-group-sm search">
-				<input type="text" name="table_search"
-					class="form-control pull-right" placeholder="Search">
+    <div class="box-header">
+        <h3 class="box-title">Responsive Hover Table</h3>
+        <div class="box-tools">
+            <div class="input-group input-group-sm search">
+                <input type="text" name="table_search"
+                       class="form-control pull-right" placeholder="Search">
 
-				<div class="input-group input-group-sm input-group-btn">
-					<button type="submit" class="btn btn-default">
-						<i class="fa fa-search"></i>
-					</button>
-				</div>
+                <div class="input-group input-group-sm input-group-btn">
+                    <button type="submit" class="btn btn-default">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </div>
             </div>
-		</div>
-	</div>
-	<div>
-		<div class="btn-importgood">
-			<button type="submit" class="btn btn-info" ng-click="importGoods()">Import</button>
-		</div>
-		<div class="btn-createnewgood">
-			<button type="submit" class="btn btn-info" ng-click="createNewGoods()">Create</button>
-		</div>
-	</div>
-	<div class="box-body table-responsive no-padding">
-		<table class="table table-hover">
-			<tr>
-				<th>ID</th>
-				<th>Name</th>
-				<th>code</th>
-				<th>Type</th>
-				<th>Unit</th>
-				<th>Image Path</th>
-				<th>Quantity</th>
-				<th>Import Price</th>
-				<th>Export Price</th>
-				<th>Action</th>
-			</tr>
-			<tr ng-repeat="x in getAllGoodsImportPage">
-				<td>{{ x.id}}</td>
-				<td>{{ x.name }}</td>
-				<td>{{ x.code }}</td>
-				<td>{{ x.type }}</td>
-				<td>{{ x.unit }}</td>
-				<td>{{ x.imagePath }}</td>
-				<td>{{ x.quantity }}</td>
-				<td>{{ x.importPrice }}</td>
-				<td>{{ x.exportPrice }}</td>
-			</tr>
-		</table>
-	</div>
+        </div>
+    </div>
+    <div>
+        <div class="btn-importgood">
+            <button type="submit" class="btn btn-info" ng-click="importGoods()">Import</button>
+        </div>
+        <div class="btn-createnewgood">
+            <button type="submit" class="btn btn-info" ng-click="createNewGoods()">Create</button>
+        </div>
+    </div>
+    <div class="box-body table-responsive no-padding">
+        <table class="table table-hover">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>code</th>
+                <th>Type</th>
+                <th>Unit</th>
+                <th>Image Path</th>
+                <th>Quantity</th>
+                <th>Import Price</th>
+                <th>Export Price</th>
+                <th>Action</th>
+            </tr>
+            <tr ng-repeat="x in getAllGoodsImportPage">
+                <td>{{ x.id}}</td>
+                <td>{{ x.name }}</td>
+                <td>{{ x.code }}</td>
+                <td>{{ x.type }}</td>
+                <td>{{ x.unit }}</td>
+                <td>{{ x.imagePath }}</td>
+                <td>{{ x.quantity }}</td>
+                <td>{{ x.importPrice }}</td>
+                <td>{{ x.exportPrice }}</td>
+                <td>
+                    <a class="fa fa-eye"></a>
+                    <a class="fa fa-eye"></a>
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
 
 <!--focus out-->
