--- a/src/main/resources/static/app/pages/import/import.html
+++ b/src/main/resources/static/app/pages/import/import.html
@@ -15,9 +15,9 @@
         </div>
     </div>
     <div>
-        <div class="btn-importgood">
-            <button type="submit" class="btn btn-info" ng-click="importGoods()">Import</button>
-        </div>
+<!--         <div class="btn-importgood"> -->
+<!--             <button type="submit" class="btn btn-info" ng-click="importGoods()">Import</button> -->
+<!--         </div> -->
         <div class="btn-createnewgood">
             <button type="submit" class="btn btn-info" ng-click="createNewGoods()">Create</button>
         </div>
@@ -48,7 +48,7 @@
                 <td>{{ x.exportPrice }}</td>
                 <td>
                     <a class="fa fa-eye"></a>
-                    <a class="fa fa-eye"></a>
+                    <a class="fa fa-edit"></a>
                 </td>
             </tr>
         </table>
