--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="demoApp">
 <head>
+	<title>Stock Management</title>
     <!-- SCROLLS -->
     <!-- load bootstrap and fontawesome via CDN -->
     <link rel="stylesheet"
