--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -95,6 +95,9 @@
 
                 <script src="app/component/popup/create-provider/createprovider.component.js"></script>
                 <script src="app/component/popup/create-provider/createprovider.controller.js"></script>
+                
+                <script src="app/component/popup/create-unit/createunit.component.js"></script>
+                <script src="app/component/popup/create-unit/createunit.controller.js"></script>
 
             </div>
         </div>
