--- a/src/main/resources/static/app/pages/export/export.html
+++ b/src/main/resources/static/app/pages/export/export.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="box-header">
-		<h3 class="box-title">Responsive Hover Table</h3>
+		<h3 class="box-title">Search</h3>
 		<div class="box-tools">
 			<div class="input-group input-group-sm search">
 				<input type="text" name="table_search"
@@ -14,9 +14,9 @@
 			</div>
 		</div>
 	</div>
-	<div class="btn-createnewgood">
-        <button type="submit" class="btn btn-info" ng-click="exportGood()">Export good</button>
-    </div>
+<!-- 	<div class="btn-createnewgood"> -->
+<!--         <button type="submit" class="btn btn-info" ng-click="exportGood()">Export good</button> -->
+<!--     </div> -->
 	<div class="box-body table-responsive no-padding">
 		<table class="table table-hover">
 			<tr>
@@ -27,19 +27,24 @@
 				<th>Unit</th>
 				<th>Image Path</th>
 				<th>Quantity</th>
-				<th>Import Price</th>
+<!-- 				<th>Import Price</th> -->
 				<th>Export Price</th>
+				<th>Action</th>
 			</tr>
 			<tr ng-repeat="x in getAllGoods">
-				<td>{{ x.id}}</td>
+				<td>{{ $index + 1 }}</td>
 				<td>{{ x.name }}</td>
 				<td>{{ x.code }}</td>
 				<td>{{ x.type }}</td>
 				<td>{{ x.unit }}</td>
 				<td>{{ x.imagePath }}</td>
 				<td>{{ x.quantity }}</td>
-				<td>{{ x.importPrice }}</td>
+<!-- 				<td>{{ x.importPrice }}</td> -->
 				<td>{{ x.exportPrice }}</td>
+				<td>
+                    <a class="fa fa-eye" ng-click="view(x.id)"></a>&nbsp;&nbsp;
+                    <a class="fa fa-edit" ng-click="exportGood(x.id)"></a>
+                </td>
 			</tr>
 		</table>
 	</div>
