--- a/src/main/resources/static/app/pages/import/import.html
+++ b/src/main/resources/static/app/pages/import/import.html
@@ -1,6 +1,6 @@
 <div>
     <div class="box-header">
-        <h3 class="box-title">Responsive Hover Table</h3>
+        <h3 class="box-title">Search</h3>
         <div class="box-tools">
             <div class="input-group input-group-sm search">
                 <input type="text" name="table_search"
@@ -33,11 +33,11 @@
                 <th>Image Path</th>
                 <th>Quantity</th>
                 <th>Import Price</th>
-                <th>Export Price</th>
+<!--                 <th>Export Price</th> -->
                 <th>Action</th>
             </tr>
             <tr ng-repeat="x in getAllGoodsImportPage">
-                <td>{{ x.id}}</td>
+                <td>{{ $index + 1 }}</td>
                 <td>{{ x.name }}</td>
                 <td>{{ x.code }}</td>
                 <td>{{ x.type }}</td>
@@ -45,7 +45,7 @@
                 <td>{{ x.imagePath }}</td>
                 <td>{{ x.quantity }}</td>
                 <td>{{ x.importPrice }}</td>
-                <td>{{ x.exportPrice }}</td>
+<!--                 <td>{{ x.exportPrice }}</td> -->
                 <td>
                     <a class="fa fa-eye" ng-click="view(x.id)"></a>&nbsp;&nbsp;
                     <a class="fa fa-edit" ng-click="editGoods(x.id)"></a>
