--- a/src/main/resources/static/app/pages/mystock/mystock.html
+++ b/src/main/resources/static/app/pages/mystock/mystock.html
@@ -1,52 +1,52 @@
 <div>
-    <div class="box-header">
-        <h3 class="box-title">Search</h3>
-        <div class="box-tools">
-            <div class="input-group input-group-sm search">
-                <input type="text" name="table_search"
-                       class="form-control pull-right" placeholder="Search">
+	<div class="box-header">
+		<h3 class="box-title">List activities of this stock</h3>
+		<div class="box-tools">
+			<div class="input-group input-group-sm search">
+				<input type="text" name="table_search"
+					class="form-control pull-right" placeholder="Search data ..."
+					ng-model="searchData">
 
-                <div class="input-group input-group-sm input-group-btn">
-                    <button type="submit" class="btn btn-default">
-                        <i class="fa fa-search"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="box-body table-responsive no-padding">
-        <table class="table table-hover">
-            <tr>
-                <th>ID</th>
-                <th>Activity</th>
-                <th>Date & time</th>
-                <th>Good name</th>
-                <th>Good code</th>
-                <th>Import price</th>
-                <th>Export price</th>
-                <th>Quantity</th>
-                <th>Provider</th>
-                <th>Customer</th>
-                <th>Action</th>
-            </tr>
-            <tr ng-repeat="x in getAllLog">
-                <td>{{ $index + 1 }}</td>
-                <td>{{ x.actionType }}</td>
-                <td>{{ x.date }}</td>
-                <td>{{ x.goodName }}</td>
-                <td>{{ x.goodCode }}</td>
-                <td>{{ x.importPrice }}</td>
-                <td>{{ x.exportPrice }}</td>
-                <td>{{ x.quantity }}</td>
-                <td>{{ x.providerName }}</td>
-                <td>{{ x.customerName }}</td>
-                <td>
-                    <a class="fa fa-eye" ng-click="view(x.id)"></a>&nbsp;&nbsp;
-                    <a class="fa fa-edit" ng-click="editGoods(x.id)"></a>
-                </td>
-            </tr>
-        </table>
-    </div>
+				<div class="input-group input-group-sm input-group-btn">
+					<button type="submit" class="btn btn-default">
+						<i class="fa fa-search"></i>
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="box-body table-responsive no-padding">
+		<table class="table table-hover">
+			<tr>
+				<th>ID</th>
+				<th>Activity</th>
+				<th>Date & time</th>
+				<th>Good name</th>
+				<th>Good code</th>
+				<th>Import price</th>
+				<th>Export price</th>
+				<th>Quantity</th>
+				<th>Provider</th>
+				<th>Customer</th>
+				<th>Action</th>
+			</tr>
+			<tr ng-repeat="x in getAllLog | orderBy:sortType:sortReverse | filter:searchData">
+				<td>{{ $index + 1 }}</td>
+				<td>{{ x.actionType }}</td>
+				<td>{{ x.date }}</td>
+				<td>{{ x.goodName }}</td>
+				<td>{{ x.goodCode }}</td>
+				<td>{{ x.importPrice }}</td>
+				<td>{{ x.exportPrice }}</td>
+				<td>{{ x.quantity }}</td>
+				<td>{{ x.providerName }}</td>
+				<td>{{ x.customerName }}</td>
+				<td><a class="fa fa-eye" ng-click="view(x.id)"></a>&nbsp;&nbsp;
+					<a class="fa fa-edit" ng-click="editGoods(x.id)"></a></td>
+			</tr>
+		</table>
+	</div>
 </div>
 
 <!--focus out-->
