--- a/src/main/resources/static/app/pages/mystock/mystock.html
+++ b/src/main/resources/static/app/pages/mystock/mystock.html
@@ -1,3 +1,6 @@
+<head>
+<!-- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"> -->
+</head>
 <div>
 	<div class="box-header">
 		<h3 class="box-title">List activities of this stock</h3>
@@ -16,6 +19,70 @@
 		</div>
 	</div>
 
+
+	<form class="form-inline">
+		<style>
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+		</style>
+		<h3>Filter for report</h3>
+		<div class="form-group">
+			<label class="control-label col-sm-2">Name:</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" ng-model="nameFilter"
+					placeholder="Enter the good's name">
+			</div>
+		</div>
+		
+		<div class="form-group">
+			<label class="control-label col-sm-2">Code:</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" ng-model="codeFilter"
+					placeholder="Enter the good's code">
+			</div>
+		</div>
+		
+	</form>
+	
+	<form class="form-inline">
+		<style>
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+		</style>
+		<div class="form-group">
+			<label class="control-label col-sm-2">Type:</label>
+			<div class="col-sm-10">
+				<select ng-model="selectedTypeFilter">
+					<option value="IMPORT">Import</option>
+					<option value="EXPORT">Export</option>
+					<option value="ALL">All</option>
+				</select>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="control-label col-sm-2">From:</label>
+			<div class="col-sm-10">
+				<input type="date" name="fromDate" ng-model="fromDateFilter">
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="control-label col-sm-2">To:</label>
+			<div class="col-sm-10">
+				<input type="date" name="toDate" ng-model="toDateFilter">
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<button type="submit" class="btn btn-default" ng-model="submitFilter"  ng-click="submitFilter()" >Report</button>
+			</div>
+		</div>
+	</form>
+	
+
+
+
+
 	<div class="box-body table-responsive no-padding">
 		<table class="table table-hover">
 			<tr>
@@ -31,7 +98,8 @@
 				<th>Customer</th>
 				<th>Action</th>
 			</tr>
-			<tr ng-repeat="x in getAllLog | orderBy:sortType:sortReverse | filter:searchData">
+			<tr
+				ng-repeat="x in getAllLog | orderBy:sortType:sortReverse | filter:searchData">
 				<td>{{ $index + 1 }}</td>
 				<td>{{ x.actionType }}</td>
 				<td>{{ x.date }}</td>
