--- a/src/main/resources/static/app/pages/import/import.html
+++ b/src/main/resources/static/app/pages/import/import.html
@@ -4,7 +4,7 @@
         <div class="box-tools">
             <div class="input-group input-group-sm search">
                 <input type="text" name="table_search"
-                       class="form-control pull-right" placeholder="Search">
+                       class="form-control pull-right" placeholder="Search good" ng-model="searchDataImport">
 
                 <div class="input-group input-group-sm input-group-btn">
                     <button type="submit" class="btn btn-default">
@@ -36,7 +36,7 @@
 <!--                 <th>Export Price</th> -->
                 <th>Action</th>
             </tr>
-            <tr ng-repeat="x in getAllGoodsImportPage">
+            <tr ng-repeat="x in getAllGoodsImportPage | orderBy:sortType:sortReverse | filter:searchDataImport">
                 <td>{{ $index + 1 }}</td>
                 <td>{{ x.name }}</td>
                 <td>{{ x.code }}</td>
