--- a/src/main/resources/static/app/pages/mystock/mystock.html
+++ b/src/main/resources/static/app/pages/mystock/mystock.html
@@ -34,7 +34,7 @@
 		</div>
 		
 		<div class="form-group">
-			<label class="control-label col-sm-2">Code:</label>
+			<label class="control-label col-sm-2">Code: </label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" ng-model="codeFilter"
 					placeholder="Enter the good's code">
@@ -48,7 +48,7 @@
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 		</style>
 		<div class="form-group">
-			<label class="control-label col-sm-2">Type:</label>
+			<label class="control-label col-sm-2">Type: </label>
 			<div class="col-sm-10">
 				<select ng-model="selectedTypeFilter">
 					<option value="IMPORT">Import</option>
@@ -59,14 +59,14 @@
 		</div>
 
 		<div class="form-group">
-			<label class="control-label col-sm-2">From:</label>
+			<label class="control-label col-sm-2">From: </label>
 			<div class="col-sm-10">
 				<input type="date" name="fromDate" ng-model="fromDateFilter">
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label class="control-label col-sm-2">To:</label>
+			<label class="control-label col-sm-2">To: </label>
 			<div class="col-sm-10">
 				<input type="date" name="toDate" ng-model="toDateFilter">
 			</div>
@@ -79,10 +79,31 @@
 		</div>
 	</form>
 	
-
-
-
-
+	<form class="form-inline">	
+		<style>
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+		</style>
+		<div class="form-group">
+			<label class="control-label col-sm-6" >Outcome: </label>
+			<div class="col-sm-2">
+				<label class="control-label col-sm-2" style="color:green;">{{ importView | currency : "" : 0 }}</label>
+			</div>
+		</div>
+		
+		<div class="form-group">
+			<label class="control-label col-sm-4">Income: </label>
+			<div class="col-sm-2"  style="color:green;">
+				<label class="control-label col-sm-2" style="color:green;">{{ exportView | currency : "" : 0 }}</label>
+			</div>
+		</div>
+		
+		<div class="form-group">
+			<label class="control-label col-sm-4">Profit: </label>
+			<div class="col-sm-2">
+				<label class="control-label col-sm-2" ng-style="totalStyle">{{ totalView | currency : "" : 0 }}</label>
+			</div>
+		</div>
+	</form>
 	<div class="box-body table-responsive no-padding">
 		<table class="table table-hover">
 			<tr>
